<resources>
    <string name="app_name">Altaib Office</string>
    <string name="libya_tripoli">Libya, Tripoli</string>
    <string name="icon_address">icon_address</string>
    <string name="phone">+218927515251</string>
    <string name="icon_phone">icon_phone</string>
    <string name="altaib_office">Altaib Office</string>
    <string name="rated">‏Rated</string>
    <string name="rated_value">4.4</string>
    <string name="following">Following</string>
    <string name="followin_value">4028</string>
    <string name="likes">Likes</string>
    <string name="likes_value">4020</string>
    <string name="titel3">Apartments, villas, houses, land, farms, restrooms, administrative buildings, restaurants, hotels.</string>
    <string name="titel2">For those wishing to sell, rent and replace real estate whether:</string>
    <string name="titel1">Hello and welcome to Altaib Office for Real Estate and General Services.</string>
    <string name="dash">---------------------------------</string>
    <string name="name">Altaib Real Estate Office</string>
    <string name="description"><![CDATA[Hello and welcome to Altaib Office for Real Estate and General Services. For those wishing to sell, rent and replace real estate whether: Apartments, villas, houses, land, farms, restrooms, administrative buildings, restaurants, hotels. Our scope of work is currently limited to these areas. # Souk_ Friday # Aradah # Oulad El Hajj # Tersalna # Shat_Hensher # Alhashan # Zanat # Hanni # Falshoum # Alnoflien #Dhahr #Farnaj #Sunhart # 11 Uniwa # 16 # lanes #Al Dahmani angle # Bab_Tajoura. And the suburbs of these areas. To contact us on the page messages or the number of the page or via e-mail. ----------------------------- --------------------- -------- For those who have a property and would like to sell it -----> Please send the full property details to the mail in the page and not in the comments to make it easier for us to serve you. The details of the land area and roofed and the number of rooms and the exact location and property ownership and street view and price and we are ready to serve you ----------------------------- --------------------- -------- For inquiries contact the following numbers: - 091-3904002 092-5623657 091-5835551 091-0691609 091-4801620 091-6665574 092-7233319 Thank you for contacting us. ”]]></string>
    <string name="about">About</string>
</resources>
