<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:contentDescription="@string/altaib_office"
                android:scaleType="fitStart"
                android:src="@drawable/bakground_en" />

            <ImageView
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_90"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/dp_150"
                android:contentDescription="@string/altaib_office"
                android:src="@drawable/altaeib_en" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textSize="@dimen/sp_22" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/libya_tripoli"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/dash"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titel1"
                android:textSize="@dimen/sp_14" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titel2"
            android:textSize="@dimen/sp_14" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titel3"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likes_value"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likes"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_60" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followin_value"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_60" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rated_value"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rated"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_30">

            <TextView
                android:id="@+id/employer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altaib_office"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_view_phone"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_below="@+id/employer_name"
                android:layout_marginTop="@dimen/dp_8"
                android:contentDescription="@string/icon_phone"
                android:scaleType="centerInside"
                android:src="@drawable/call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/employer_name"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_toRightOf="@+id/image_view_phone"
                android:autoLink="phone"
                android:text="@string/phone"
                tools:ignore="RtlHardcoded" />

            <ImageView
                android:id="@+id/image_view_address"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_below="@+id/image_view_phone"
                android:layout_marginTop="@dimen/dp_8"
                android:contentDescription="@string/icon_address"
                android:scaleType="centerInside"
                android:src="@drawable/add_location" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_view_phone"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_toRightOf="@+id/image_view_address"
                android:text="@string/libya_tripoli"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/description"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
